examples/test/testpolicy593.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy593
  namespace: namespace459
spec:
  podSelector:
    matchLabels:
      key28: value25
      key10: value23
      key14: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value6
          key47: value35
          key12: value41
      podSelector:
        matchLabels:
          key27: value18
          key13: value5
